@@ -141,6 +141,17 @@ pod2usage( -verbose => 1 ) if $help;
 my $switchFactory = new pf::SwitchFactory(
     -configFile => INSTALL_DIR . '/conf/switches.conf' );
 
+# building trap-matcher regexp
+my $TRAP_PATTERN = qr/
+    ^\d{4}-\d{2}-\d{2}\|\d{2}:\d{2}:\d{2}\|             # date|time
+    (?:UDP:\ \[)?                                       # Optional "UDP: [" (since v2 traps I think)
+    (\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3})                # network device ip address
+    (?:\]:\d+)?                                         # Optional "]:port" (since v2 traps I think)
+    (?:\-\>\[\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\])?     # Optional "->[ip address]" (since net-snmp 5.4)
+    \|([^|]*)\|                                         # Used to carry network device ip if it's a local trap
+    (.+)$                                               # Trap message
+/x;
+
 my $fh = new File::Tail(
     'name'        => INSTALL_DIR . '/logs/snmptrapd.log',
     'interval'    => 2,
@@ -447,10 +458,7 @@ sub signalHandlerTrapListQueued {
                         = substr( $trapList_queued[$i], length($prefix) );
                     if ( $prefix =~ /^inparse/ ) {
                         push @tmpTrapList_queued, $trapList_queued[$i];
-                        if ( $trapLine
-                            =~ /^\d{4}-\d{2}-\d{2}\|\d{2}:\d{2}:\d{2}\|(?:UDP: \[)?(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3})(?:\]:\d+)?\|([^|]*)\|(.+)$/
-                            )
-                        {
+                        if ($trapLine =~ /$TRAP_PATTERN/) {
                             my $switch_ip = $1;
                             $logger->trace(
                                 "adding $switch_ip to switchesWithUnfinishedParse"
@@ -583,7 +591,7 @@ sub parseTrap {
     Log::Log4perl::MDC->put( 'tid', threads->self->tid() );
 
     $logger->debug("parsing trap $trapLine");
-    if ( $trapLine =~ /^\d{4}-\d{2}-\d{2}\|\d{2}:\d{2}:\d{2}\|(?:UDP: \[)?(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3})(?:\]:\d+)?\|([^|]*)\|(.+)$/ ) {
+    if ( $trapLine =~ /$TRAP_PATTERN/ ) {
 
         #test if this is a 'normal' trap (i.e. a trap sent from a switch
         #or a local trap (INVERSE-PACKETFENCE-NOTIFICATION-MIB)
