@@ -36,6 +36,7 @@ Enhancements
 - More information available in Node Lookup (IP, DHCP lease)
 - Improved database layer (more robust and logs errors)
 - pfsetvlan is more resistant to configuration mistakes and reports them (#766)
+- Net-SNMP 5.4 support (#940 Thanks to Maikel)
 - @ character now allowed in person id (pid). This is very common in Active 
   Directory environment.
 - New admin authentication mechanism added (disabled by default)
